# samarangese_leaf_classifier

./: .gitignore  hello.py  pyproject.toml  split_data.py  traditional_ml.ipynb  train_efficientnetv2s.py
